# no-std-moving-average-rs

./: Cargo.toml  LICENSE-MIT  README.md  build.sh
.github/workflows/: cloud-ci.yml
src/: lib.rs  moving_average.rs
